@startuml
skinparam classAttributeIconSize 0

title Library System - UML Overview

class Library {
  -books: Book[]
  -loans: Loan[]
  -notifications: Notification[]
  -bookSeed: number
  -loanSeed: number
  +getInstance(): Library
  +addBook(payload): Book
  +listBooks(): Book[]
  +searchBooks(by, keyword): Book[]
  +borrowBook(payload): Loan
  +returnBook(loanId): Loan
  +checkOverdue(): OverdueResult
}

class BookFactory {
  +createBook(type, payload): Book
}

class Book {
  +id: string
  +title: string
  +author: string
  +genre: string
  +type: string
  +available: boolean
}

class PaperBook
class EBook
class AudioBook

class SearchContext {
  -strategy: SearchStrategy
  +setStrategy(strategy)
  +execute(books, keyword): Book[]
}

interface SearchStrategy {
  +search(books, keyword): Book[]
}

class SearchByTitle
class SearchByAuthor
class SearchByGenre

class NotificationCenter {
  -observers: Subscriber[]
  +subscribe(observer)
  +unsubscribe(name)
  +notify(event): string[]
}

class Subscriber {
  +name: string
  +role: string
  +update(event): string
}

class BorrowBase {
  +getBorrowDays(): number
  +getFeatures(): string[]
}

class BorrowDecorator {
  -wrappee: BorrowBase
  +getBorrowDays(): number
  +getFeatures(): string[]
}

class ExtendLoanDecorator
class SpecialEditionDecorator

class Loan {
  +id: string
  +bookId: string
  +borrowerName: string
  +borrowDate: Date
  +dueDate: Date
  +returned: boolean
  +features: string[]
}

Library --> BookFactory
Library --> SearchContext
Library --> NotificationCenter
Library --> BorrowBase
Library --> Loan
Library --> Book

BookFactory ..> Book : creates
Book <|-- PaperBook
Book <|-- EBook
Book <|-- AudioBook

SearchContext --> SearchStrategy
SearchStrategy <|.. SearchByTitle
SearchStrategy <|.. SearchByAuthor
SearchStrategy <|.. SearchByGenre

NotificationCenter "1" o-- "*" Subscriber

BorrowBase <|-- BorrowDecorator
BorrowDecorator <|-- ExtendLoanDecorator
BorrowDecorator <|-- SpecialEditionDecorator
BorrowDecorator --> BorrowBase : wraps

@enduml
